# sonarpractice

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  README_de.md  SonarPractice_de_DE.ts  basepage.cpp  basepage.h  brandlabel.cpp  brandlabel.h  collapsiblesection.cpp  collapsiblesection.h  databasemanager.cpp  databasemanager.h  filefilterproxymodel.cpp  filefilterproxymodel.h  filemanager.cpp  filemanager.h  filescanner.cpp  filescanner.h  fileselectiondialog.cpp  fileselectiondialog.h  fileutils.h  filterpage.cpp  filterpage.h  fnv1a.h  gpparser.cpp  gpparser.h  importdialog.cpp  importdialog.h  importprocessor.h  index.html  librarypage.cpp  librarypage.h  lupdate.bat  main.cpp  mainwindow.cpp  mainwindow.h  mappingpage.cpp  mappingpage.h  (+21 more)
.github/workflows/: cli.yml
SonarPracticeTests/: CMakeLists.txt
SonarPracticeTests/test_proxy/: CMakeLists.txt  tst_filefilterproxymodel.cpp
docs/: 404.html  dashboard.md  index.html  index.md  installation.md  konfiguration.md  update.md
docs/dashboard/: index.html
docs/installation/: index.html
docs/konfiguration/: index.html
docs/search/: search_index.json
docs/update/: index.html
download/: version.txt
installer/: config_template.xml  create_installer.sh  package_template.xml
installer/config/: controlscript.qs
repo/: 2026-03-02-0141_meta.7z  2026-03-02-0149_meta.7z  2026-03-02-0205_meta.7z  2026-03-02-0206_meta.7z  2026-03-02-0728_meta.7z  2026-03-03-0142_meta.7z  2026-03-03-1736_meta.7z  2026-03-03-1907_meta.7z  2026-03-03-2232_meta.7z  2026-03-03-2237_meta.7z  2026-03-03-2243_meta.7z  2026-03-06-0642_meta.7z  2026-03-06-0648_meta.7z  2026-03-11-0003_meta.7z  Updates.xml
repo-test/: 2026-03-01-1927_meta.7z  2026-03-01-1937_meta.7z  Updates.xml
repo-test/io.github.knasan.sonarpractice/: 2026.03.01content.7z.sha1  2026.03.01generic.7z  2026.03.01generic.7z.sha1  2026.03.01iconengines.7z  2026.03.01iconengines.7z.sha1  2026.03.01imageformats.7z  2026.03.01imageformats.7z.sha1  2026.03.01meta.7z  2026.03.01networkinformation.7z  2026.03.01networkinformation.7z.sha1  2026.03.01platforms.7z  2026.03.01platforms.7z.sha1  2026.03.01sqldrivers.7z  2026.03.01sqldrivers.7z.sha1  2026.03.01styles.7z  2026.03.01styles.7z.sha1  2026.03.01tls.7z  2026.03.01tls.7z.sha1  2026.03.01translations.7z  2026.03.01translations.7z.sha1
repo/io.github.knasan.sonarpractice/: 0.2.10content.7z.sha1  0.2.10generic.7z  0.2.10generic.7z.sha1  0.2.10iconengines.7z  0.2.10iconengines.7z.sha1  0.2.10imageformats.7z  0.2.10imageformats.7z.sha1  0.2.10meta.7z  0.2.10networkinformation.7z  0.2.10networkinformation.7z.sha1  0.2.10platforms.7z  0.2.10platforms.7z.sha1  0.2.10sqldrivers.7z  0.2.10sqldrivers.7z.sha1  0.2.10styles.7z  0.2.10styles.7z.sha1  0.2.10tls.7z  0.2.10tls.7z.sha1  0.2.10translations.7z  0.2.10translations.7z.sha1  0.2.4-dirtycontent.7z.sha1  0.2.4-dirtygeneric.7z  0.2.4-dirtygeneric.7z.sha1  0.2.4-dirtyiconengines.7z  0.2.4-dirtyiconengines.7z.sha1  0.2.4-dirtyimageformats.7z  0.2.4-dirtyimageformats.7z.sha1  0.2.4-dirtynetworkinformation.7z  0.2.4-dirtynetworkinformation.7z.sha1  0.2.4-dirtyplatforms.7z  0.2.4-dirtyplatforms.7z.sha1  0.2.4-dirtysqldrivers.7z  0.2.4-dirtysqldrivers.7z.sha1  0.2.4-dirtystyles.7z  0.2.4-dirtystyles.7z.sha1  0.2.4-dirtytls.7z  0.2.4-dirtytls.7z.sha1  0.2.4-dirtytranslations.7z  0.2.4-dirtytranslations.7z.sha1  0.2.4content.7z.sha1  (+155 more)
styles/: base.qss  main.qss  wizard.qss
